# awaf-cli

./: .gitignore  ARCHITECTURE.md  CALIBRATION.md  CLAUDE.md  LICENSE  PROVIDER_SPEC.md  README.md  pyproject.toml
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  eval-grader.yml  publish.yml
awaf/: cli.py  config.py  db.py  evalgrader.py  findings.py  graph.py  graph_extractor.py  ingestor.py  jsonparse.py  pricing.py  report_html.py  reportcheck.py  retry.py  telemetry.py  validator.py
awaf/pillars/: __init__.py  base.py  context_integrity.py  controllability.py  cost.py  foundation.py  op_excellence.py  performance.py  reasoning.py  reliability.py  security.py  sustainability.py
awaf/providers/: __init__.py  anthropic.py  azure.py  base.py  google.py  litellm.py  openai.py
docs/adr/: 001-no-agent-orchestration-frameworks.md
examples/bad-agent/: AWAF_SCORE.md  README.md  agent.py  awaf-report.txt
examples/good-agent/: AWAF_SCORE.md  README.md  agent.py  awaf-report.txt
examples/good-agent/.github/workflows/: scheduled-evals.yml
examples/good-agent/docs/: postmortem_template.md
examples/good-agent/docs/adr/: 001-vertical-slice-boundary.md
examples/good-agent/docs/postmortems/: 2026-01-15-api-timeout-incident.md
examples/good-agent/evals/: golden_dataset.json  run_evals.py  test_contradictions.py  test_select_model.py
examples/good-agent/monitoring/: cloudwatch_alarms.json  network.tf  pagerduty_rules.yaml
scripts/: calibrate.py
tests/: conftest.py  test_band_consistency.py  test_calibrate.py  test_cli.py  test_cli_fixes.py  test_cli_graph.py  test_cli_report_html.py  test_cli_report_shape.py  test_compare_findings.py  test_config.py  test_db_cache_dir.py  test_db_migration.py  test_eval_skill_cli.py  test_evalgrader.py  test_findings.py  test_graph.py  test_graph_cache.py  test_graph_config.py  test_graph_extractor.py  test_ingestor.py  test_report_html.py  test_reportcheck.py  test_retry.py  test_run_graph.py  test_run_reorder.py  test_run_telemetry_lifecycle.py  test_telemetry.py  test_telemetry_config.py  test_validator.py  test_version.py
tests/pillars/: test_all_pillars.py  test_base.py  test_pattern_signals.py  test_starvation_retry.py
tests/providers/: test_anthropic.py  test_azure.py  test_google.py  test_litellm.py  test_openai.py
