[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awaf"
version = "0.1.0"
description = "Score AI agent architectures against the AWAF open specification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "sqlalchemy>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0", "tiktoken>=0.7.0"]
azure = ["openai>=1.50.0", "tiktoken>=0.7.0"]
google = ["google-generativeai>=0.8.0"]
litellm = ["litellm>=1.50.0"]
all-providers = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "google-generativeai>=0.8.0",
    "litellm>=1.50.0",
]

[project.scripts]
awaf = "awaf.cli:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["awaf"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires real API key, skipped in CI)",
]
testpaths = ["tests"]
