[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awaf"
version = "0.1.9"
description = "Score AI agent architectures against the AWAF open specification"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Yogiraj Aradhye"}]
keywords = ["ai", "agents", "architecture", "llm", "evaluation", "well-architected"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "croniter>=6.2.2",
    "json-repair>=0.58.6",
    "sqlalchemy>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://awaf.ai"
Repository = "https://github.com/YogirajA/awaf-cli"
"Bug Tracker" = "https://github.com/YogirajA/awaf-cli/issues"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0", "tiktoken>=0.7.0"]
azure = ["openai>=1.50.0", "tiktoken>=0.7.0"]
google = [
    "google-genai>=0.3.0",
]
litellm = ["litellm>=1.50.0"]
all-providers = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "google-genai>=0.3.0",
    "litellm>=1.50.0",
]

[project.scripts]
awaf = "awaf.cli:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["awaf"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires real API key, skipped in CI)",
]
testpaths = ["tests"]
